--- a/.github/workflows/main_mrv.yml
+++ b/.github/workflows/main_mrv.yml
@@ -8,5 +8,5 @@ jobs:
     - uses: actions/checkout@v2
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: 'Project-Beta'
+        app-name: 'MRv'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
